<resources>
    <string name="app_name">Noten Rechner</string>
    <string name="title_activity_new_grade">Note eintragen</string>

    <string name="action_settings">Einstellungen</string>
    <string name="overview">Übersicht</string>
    <string name="history">Verlauf</string>
    <string name="edit">Bearbeiten</string>
    <string name="average">Durchschnitt</string>
    <string name="unsufficient">Mangelpunkte</string>
    <string name="newgrade_name">Name</string>
    <string name="subject">Fächer</string>
    <string name="achieved_grade">Erreichte Note</string>
    <string name="factor">Gewichtung</string>
    <string name="date">Datum</string>
    <string name="save">Speichern</string>
    <string name="round">Runden auf</string>
    <string name="best_grade">beste Note</string>
    <string name="new_subject">neues Fach</string>
    <string name="add_new_subject">Fach hinzufügen</string>
    <string name="edit_subjects">Fächer bearbeiten</string>
    <string name="doubledigitgrade">Note mit 2 Ziffern</string>

    <!-- TITLE OF DRAWER ITEMS -->
    <string name="drawerGradeAverage">Notenübersicht</string>
    <string name="drawerCalendar">Prüfungskalender</string>
    <string name="drawerSubjects">Fächer</string>
    <string name="drawerShop">Keine Werbung</string>
    <string name="drawerSettings">Einstellungen</string>

    <!-- TITLE OF DRAWER FRAGMENTS -->
    <string name="fragmentGradeAverage">Noten Rechner</string>
    <string name="fragmentGradeCalendar">Prüfungskalender</string>
    <string name="fragmentSubjects">Fächer</string>
    <string name="fragmentShop">Shop</string>
    <string name="fragmentSettings">Einstellungen</string>


    <string name="new_semester">Neues Semester</string>
    <string name="choose_date">Datum wählen</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="errorMsgWrongInputNumerical">Diese Eingabe ist ungültig!</string>
    <string name="error">Fehler!</string>
    <string name="hint_new_subject">z.B. Wirtschaft und Recht</string>
    <string name="hint_achieved_grade">z.B. 4.6</string>
    <string name="hint_factor">z.B. 100</string>
    <string name="hint_newgrade_name">z.B. Atommodell</string>
    <string name="info">Information</string>
    <string name="details">Details</string>
    <string name="exam">Prüfung</string>
    <string name="grade">Note</string>
    <string name="close">Schliessen</string>
    <string name="okay">Ok</string>
    <string name="needSubjects">Trage bitte zuerst ein Fach ein!</string>
    <string name="deleteSure">Bist Du sicher, dass Du \nalle Noten löschen willst?</string>
    <string name="yes">Ja</string>
    <string name="stringYes">Ja</string>
    <string name="stringNo">Nein</string>
    <string name="stringDeleteSure">Bist Du sicher, dass Du \nalle Noten löschen willst?</string>
    <string name="no">Nein</string>
    <string name="hyphen">-</string>
    <string name="triplehyphen">---</string>
    <string name="iconHome">Noten Durchschnitt</string>
    <string name="iconCalendar">Prüfungserrinerung</string>
    <string name="iconSubjects">Fächer</string>
    <string name="iconShoppingcart">Premium</string>
    <string name="noGrades">Du hast noch keine Noten eingetragen.</string>
    <string name="iconSettings">Einstellungen</string>
    <string name="addnewgrade">Neues Fach eintragen</string>
    <string name="subjectname">Fachname</string>
    <string name="subjectfactor">Wie viel % zählt dieses Fach? Standard: 100%</string>
    <string name="testfactor">Wie viel % zählt diese Prüfung? Standard: 100%</string>
    <string name="testname">Prüfungsname</string>
    <string name="splash.text">Notenrechner</string>
    <string name="premiumForCalendar">Für die Funktion Prüfungserrinerung brauchst du die Premium-Edition!</string>
    <string name="fillAllFields">Fülle bitte alle Felder aus!</string>
    <string name="premiumTitle">Keine Werbung</string>
    <string name="premiumSubtitle">1.50 CHF</string>
    <string name="premiumBuyNow">Jetzt kaufen</string>
    <string name="registerExam">Prüfung eintragen</string>
    <string name="subjectExists">Dieses Fach existiert bereits!</string>
    <string name="premiumForMoreSubjects">Um mehr Fächer eintragen zu können, brauchst du die Premium-Edition.</string>
    <string name="search_hint">Suche nach Prüfungen oder Fächer</string>
    <string name="search_label">Prüfungen</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="faction_in_percent">Gewichtung in %</string>

    <string name="gradecalculator">Notenrechner</string>
    <string name="grade_calendar">Prüfungserinnerung</string>
    <string name="sAverages">Fächer</string>
    <string name="shop">Notenrechner Premium</string>
    <string name="settings">Einstellungen</string>

    <string name="premiumfeatures"> - Unendlich viele Fächer eintragen\n\n- Angesagte Prüfungen eintragen\n\n- Erinnerungen setzen \n\n- Keine Werbung</string>

    <!-- <string name="banner_ad_unit_id">ca-app-pub-4536790503715606/3852335375</string>-->

    <string name="banner_ad_unit_id">ca-app-pub-4536790503715606/3852335375</string>
    <string name="intersitial_ad_unit_id">ca-app-pub-4536790503715606/9421190978</string>



    <string-array name="navigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>

    <string name="title_activity_edit_subjects">Fächer bearbeiten</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Leeres Formular!</string>
    <string name="title_activity_register_exam">RegisterExamActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_schedule_notification">ScheduleNotificationActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="text_premium_price">0.99 CHF</string>
    <string name="billing_success">Einkauf Erfolgreich</string>
    <string name="billing_fail">Einkauf Fehlgeschlagen</string>
    <string name="dlg_new_subject">Neues Fach Eintragen</string>
    <string name="dlg_add_subject">Fach Hinzufügen</string>
    <string name="text.navigation">Navigation</string>
    <string name="rate.message">Wenn euch diese app gefaelt bitte bewertet sie!</string>
    <string name="rate.title">Bewerte diese App!</string>
    <string name="title_activity_subject_detail">SubjectDetailActivity</string>
    <string name="average.card.title">Durchschnitt</string>
    <string name="average.card.subtitle">Angepasst auf das Schweizer Schulsystem</string>

    <!-- Preference Title -->
    <string name="pref_tit_roundgrades">Runden</string>
    <string name="pref_tit_twodigitgrades">2 Stellige Maximalnote</string>
    <string name="pref_tit_showinsufficient">Mangelpunktee</string>

    <!-- Preference Summary -->
    <string name="pref_sum_roundgrades">Sollen die noten gerundet werden</string>
    <string name="pref_sum_twodigitgrades">Ist die note uber 9? dann das anklicken</string>
    <string name="pref_sum_showinsufficient">Mangelpunkte anzeigen?</string>

    <!-- Preference Key -->
    <string name="pref_key_roundgrades">key_preference_roundgrades</string>
    <string name="pref_key_twodigitgrades">key_preference_twodigitgrades</string>
    <string name="pref_key_showinsufficient">key_preference_showinsufficient</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="text.roundsubjects.true">Facher werdern gerundet</string>
    <string name="text.roundsubjects.false">Facher werden nicht gerundet</string>
    <string name="date.from">"vom "</string>
    <string name="subject_no_grades_yet">Keine Noten</string>
    <string name="selected_count">"Anzahl Ausgewaehlt "</string>
    <string name="subject.factor">Fach Gewichtung</string>
    <string name="subject.singular">Fach</string>
    <string name="input.saved">Eingabe Gespeichert.</string>
    <string name="input.error">Ein Fehler ist Aufgetreten.</string>

</resources>
