<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="15"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    >


    <TextView
        android:text="@string/round"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="0"
        />

    <Spinner
        android:id="@+id/round_to_grade"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/switch_thumb_normal_material_dark"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:text="@string/best_grade"
        android:layout_column="0"
        android:layout_row="3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/best_grade"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="2"
        android:imeOptions="actionDone"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/switch_thumb_normal_material_dark"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="3"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:text="@string/unsufficient"
        android:layout_column="0"
        android:layout_row="6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"

        />

    <Switch
        android:id="@+id/show_unsufficient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_column="2"
        android:layout_row="6"
        android:checked="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:background="@color/switch_thumb_normal_material_dark"

        />

    <TextView
        android:text="@string/new_subject"
        android:layout_column="0"
        android:layout_row="8"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/add_new_grade_name"
        android:hint="@string/hint_new_subject"
        android:maxLines="1"
        android:maxLength="14"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_columnSpan="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        />
    <TextView
        android:text="@string/factor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="10"/>
    <EditText
        android:id="@+id/factor_new_grade"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_width="wrap_content"
        android:maxLines="1"
        android:maxLength="3"
        android:hint="@string/hint_factor"
        android:layout_column="0"
        android:layout_row="11"/>
    <Button
        android:id="@+id/add_new_subject"
        android:hint="@string/add_new_subject"
        android:layout_column="1"
        android:layout_width="200dp"
        android:layout_columnSpan="2"
        android:layout_row="11"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:background="@color/switch_thumb_normal_material_dark"

        />

    <Button
        android:id="@+id/edit_subjects"
        android:text="@string/edit_subjects"
        android:layout_row="13"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/new_semester"
        android:text="@string/new_semester"
        android:layout_row="14"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
</GridLayout>
</ScrollView>