<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:columnCount="2"
    android:rowCount="7"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        />
    <TextView
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginBottom="15dp"
        android:id="@+id/dialog_tv_subject"
        android:text="Deutsch"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"

        />

    <View
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_columnWeight="1"

        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/exam"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_columnWeight="1"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:id="@+id/dialog_et_gradename"
        android:text="Das Lyrische Ich"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"

        />

    <TextView
        android:layout_columnWeight="1"

        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/grade"
        />
    <EditText
        android:background="@android:drawable/editbox_dropdown_light_frame"

        android:layout_columnWeight="1"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:id="@+id/dialog_et_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:text="5.5"
        android:padding="10dp"

        />
    <TextView
        android:layout_columnWeight="1"

        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        />

    <EditText
        android:background="@android:drawable/editbox_dropdown_light_frame"

        android:layout_columnWeight="1"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:id="@+id/dialog_et_factor"
        android:text="100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:padding="10dp"
        />
    <TextView
        android:layout_columnWeight="1"

        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        />
    <EditText
        android:background="@android:drawable/editbox_dropdown_light_frame"

        android:layout_columnWeight="1"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:id="@+id/dialog_et_date"
        android:text="03.07.2015"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:padding="10dp"

        />
    <ToggleButton
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:textOn="@string/save"
        android:textOff="@string/edit"
        android:id="@+id/dialog_btn_edit"
        android:layout_row="6"
        android:layout_column="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_columnWeight="1"

        />




</GridLayout>