<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/ColorPrimary"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popup_title"
        android:text="@string/factor"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <EditText
        android:id="@+id/popup_edit_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/popup_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_below="@+id/popup_title"
         />
    <Button
        android:id="@+id/popup_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/popup_title"
        android:layout_toStartOf="@+id/popup_title"
        android:layout_marginTop="78dp" />
    <Button
        android:id="@+id/popup_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/popup_save"
        android:layout_toEndOf="@+id/popup_title" />



</RelativeLayout>